fix(ui): fix according clarity latest version

--- a/src/app/settings/inventory/inventory.component.html
+++ b/src/app/settings/inventory/inventory.component.html
@@ -4,7 +4,7 @@
     <input type="text" id="search" name="search" placeholder="{{ 'DEVICESSETTINGS.SEARCH' | translate }}">
   </div>
   -->
-  <clr-datagrid [(clrDgSelected)]="selectedDevices" [clDgRowSelection]="true">
+  <clr-datagrid [(clrDgSelected)]="selectedDevices" [clrDgRowSelection]="true">
 
     <clr-dg-action-bar>
       <div class="btn-group">
