--- a/src/app/settings/roles/roles.component.html
+++ b/src/app/settings/roles/roles.component.html
@@ -1,5 +1,5 @@
 <clr-datagrid *ngIf="roles">
-  <!-- [(clrDgSelected)]="selectedRoles" [clDgRowSelection]="true" -->
+  <!-- [(clrDgSelected)]="selectedRoles" [clrDgRowSelection]="true" -->
   <!--
   <clr-dg-action-bar>
     <div class="btn-group">
