--- a/src/app/test-management/test-cases/test-cases.component.html
+++ b/src/app/test-management/test-cases/test-cases.component.html
@@ -1,5 +1,5 @@
 <h4 *ngIf="selectedTestSuite">{{ selectedTestSuite.name }}</h4>
-<clr-datagrid *ngIf="testCases" [(clrDgSelected)]="selectedTestCases" [clDgRowSelection]="true">
+<clr-datagrid *ngIf="testCases" [(clrDgSelected)]="selectedTestCases" [clrDgRowSelection]="true">
 
   <clr-dg-action-bar>
     <div class="btn-group">
