--- a/src/app/test-management/test-management.component.html
+++ b/src/app/test-management/test-management.component.html
@@ -14,7 +14,7 @@
         <!-- TODO move to testsuites tree component -->
 
         <clr-tree-node class="suite-node" *ngFor="let testSuite of testSuitesViewModel">
-          <button (click)="openTestSuite(testSuite)" class="clr-treenode-link">
+          <button clrVerticalNavLink (click)="openTestSuite(testSuite)" class="clr-treenode-link">
             <clr-icon [attr.shape]="testSuite.icon"></clr-icon>
             {{ testSuite.name }}
             <clr-icon shape="plus" (click)="onAdd(testSuite);"></clr-icon>
