--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="projects" class="content-area">
 
-  <app-project-wizard [(opened)]="projectWizardOpened"></app-project-wizard>
+  <app-project-wizard [(opened)]="projectWizardOpened" (projectChange)="createProject($event);"></app-project-wizard>
 
   <app-system-wizard></app-system-wizard>
 
