fix(projects): fix wizard param

--- a/src/app/projects/project-wizard/project-wizard.component.html
+++ b/src/app/projects/project-wizard/project-wizard.component.html
@@ -6,7 +6,7 @@
   <clr-wizard-button [type]="'cancel'" (click)="setOpened(false)">Cancel</clr-wizard-button>
   <clr-wizard-button [type]="'previous'">Back</clr-wizard-button>
   <clr-wizard-button [type]="'next'">Next</clr-wizard-button>
-  <clr-wizard-button [type]="'finish'" (click)="setOpened(false); createProject(project);">Finish</clr-wizard-button>
+  <clr-wizard-button [type]="'finish'" (click)="setOpened(false); createProject();">Finish</clr-wizard-button>
 
   <clr-wizard-page [clrWizardPageNextDisabled]="name.pristine || !createProjectForm.valid">
     <ng-template clrPageTitle>Project Details</ng-template>
