--- a/src/app/projects/project-wizard/project-wizard.component.html
+++ b/src/app/projects/project-wizard/project-wizard.component.html
@@ -1,7 +1,7 @@
 <!--<button class="btn btn-primary" (click)="projectWizard = !projectWizard;">Open</button>-->
 
 <clr-wizard #wizardlg [(clrWizardOpen)]="opened">
-  <clr-wizard-title>Project Creation Wizard</clr-wizard-title>
+  <clr-wizard-title>{{ 'PROJECTCREATEPAGE.WIZARD_TITLE' | translate }}</clr-wizard-title>
 
   <clr-wizard-button [type]="'cancel'" (click)="setOpened(false)">Cancel</clr-wizard-button>
   <clr-wizard-button [type]="'previous'">Back</clr-wizard-button>
@@ -9,16 +9,15 @@
   <clr-wizard-button [type]="'finish'" (click)="setOpened(false); createProject();">Finish</clr-wizard-button>
 
   <clr-wizard-page [clrWizardPageNextDisabled]="name.pristine || !createProjectForm.valid">
-    <ng-template clrPageTitle>Project Details</ng-template>
+    <ng-template clrPageTitle>{{ 'PROJECTCREATEPAGE.PROJECT_DETAILS' | translate }}</ng-template>
     <form #createProjectForm="ngForm">
       <section class="form-block">
-        <label>Enter Project name and description</label>
         <div class="form-group">
-          <label for="name" class="required">Project name</label>
+          <label for="name" class="required">{{ 'PROJECTCREATEPAGE.NAME' | translate }}</label>
           <input type="text" id="name" name="name" [(ngModel)]="project.name" #name="ngModel" required minlength="2">
         </div>
         <div class="form-group">
-          <label for="description" class="required">Project description</label>
+          <label for="description" class="required">{{ 'PROJECTCREATEPAGE.DESCRIPTION' | translate }}</label>
           <input type="text" id="description" name="description" [(ngModel)]="project.description" #description="ngModel" required>
         </div>
       </section>
