feat(settings): add integrations page

--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -18,6 +18,11 @@
         {{ 'SETTINGS.INVENTORY' | translate }}
       </a>
 
+      <a clrVerticalNavLink routerLink="./integrations" routerLinkActive="active">
+        <clr-icon clrVerticalNavIcon shape="plugin"></clr-icon>
+        {{ 'SETTINGS.INTEGRATIONS' | translate }}
+      </a>
+
     </div>
 
   </clr-vertical-nav>
