--- a/src/app/settings/users/users.component.css
+++ b/src/app/settings/users/users.component.css
@@ -1,3 +1,15 @@
 .wrapper {
     height: calc(100vh - 110px);
 }
+
+.avatar {
+    width: 32px;
+    height: 32px;
+    border-radius: 50%;
+    text-align: center;
+}
+
+.avatar-name {
+  position: relative;
+  top: 9px;
+}
