--- a/src/app/settings/users/users.component.css
+++ b/src/app/settings/users/users.component.css
@@ -3,13 +3,15 @@
 }
 
 .avatar {
-    width: 32px;
-    height: 32px;
+    width: 24px;
+    height: 24px;
     border-radius: 50%;
     text-align: center;
+    margin: 0 auto !important;
 }
 
 .avatar-name {
   position: relative;
-  top: 9px;
+  top: 4px;
+  font-size: 50% !important;
 }
