feat(testcases): add expandable rows with description and etc

--- a/src/app/test-management/test-cases/test-cases.component.html
+++ b/src/app/test-management/test-cases/test-cases.component.html
@@ -36,6 +36,14 @@
 
     </clr-dg-cell>
 
+    <!-- TODO for execution
+    <clr-dg-row-detail *clrIfExpanded [clrDgReplace]="false">
+
+
+        <span><strong>description: </strong> {{ testCase.description }}</span>
+
+    </clr-dg-row-detail>
+    -->
     <!--
   <clr-dg-cell>
     {{ testCase.order}}
