feat(i18n): rename avatar to photo

--- a/src/app/settings/users/users.component.html
+++ b/src/app/settings/users/users.component.html
@@ -17,7 +17,7 @@
             </div>
           </clr-dg-action-bar>
 
-          <clr-dg-column style="width: 70px;">{{ 'USERSSETTINGS.AVATAR' | translate }}</clr-dg-column>
+          <clr-dg-column style="width: 70px;">{{ 'USERSSETTINGS.PHOTO' | translate }}</clr-dg-column>
           <clr-dg-column>{{ 'USERSSETTINGS.NAME' | translate }}</clr-dg-column>
           <clr-dg-column>Email</clr-dg-column>
           <!--<clr-dg-column>Role</clr-dg-column>-->
@@ -27,9 +27,10 @@
 
           <clr-dg-row *clrDgItems="let user of users" [clrDgItem]="user">
             <clr-dg-cell style="padding: 5px;">
+              <!-- TODO ngIf else for photo / placeholder -->
               <div *ngIf="user.avatarColor" class="avatar" [style.backgroundColor]="getBackgroundColor(user)" [style.color]="getColor(user)">
-              <span class="avatar-name">{{ user.lastName.charAt(0).toUpperCase() }}{{ user.firstName.charAt(0).toUpperCase() }}</span>
-            </div>
+                <span class="avatar-name">{{ user.lastName.charAt(0).toUpperCase() }}{{ user.firstName.charAt(0).toUpperCase() }}</span>
+              </div>
             </clr-dg-cell>
             <clr-dg-cell>{{user.lastName}} {{user.firstName}}</clr-dg-cell>
             <clr-dg-cell>{{user.email}}</clr-dg-cell>
@@ -54,12 +55,12 @@
       </clr-tab-content>
     </clr-tab>
     <clr-tab>
-        <button clrTabLink>Organizations</button>
-        <clr-tab-content *clrIfActive>
+      <button clrTabLink>Organizations</button>
+      <clr-tab-content *clrIfActive>
 
-          <h4>TBD</h4>
-        </clr-tab-content>
-      </clr-tab>
+        <h4>TBD</h4>
+      </clr-tab-content>
+    </clr-tab>
   </clr-tabs>
 </div>
 <app-create-user-modal [(opened)]="createOpened" (userChange)="createUser($event);"></app-create-user-modal>
