--- a/src/app/test-management/create-test-case-modal/create-test-case-modal.component.html
+++ b/src/app/test-management/create-test-case-modal/create-test-case-modal.component.html
@@ -20,7 +20,16 @@
           <label for="priority">{{ 'TESTCASECREATEPAGE.PRIORITY' | translate }}</label>
           <div class="select">
             <select id="priority" name="priority" [(ngModel)]="testcase.priority" #priority="ngModel">
-              <option *ngFor="let key of keys" [value]="key.value">{{ 'PRIORITIES.' + priorities[key] | translate }}</option>
+              <option *ngFor="let priority of priorityKeys" [value]="priority.value">{{ 'PRIORITIES.' + priority.value | translate }}</option>
+            </select>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <label for="type">{{ 'TESTCASECREATEPAGE.TYPE' | translate }}</label>
+          <div class="select">
+            <select id="type" name="type" [(ngModel)]="testcase.type" #priority="ngModel">
+              <option *ngFor="let type of typeKeys" [value]="type.value">{{ 'TESTCASETYPE.' + type.value | translate }}</option>
             </select>
           </div>
         </div>
