fix(ui): fix signup header

--- a/src/app/login/sign-up/sign-up.component.html
+++ b/src/app/login/sign-up/sign-up.component.html
@@ -7,7 +7,7 @@
         Test Storage
       </label>
 
-      <label>{{ 'USERCREATEPAGE.TITLE' | translate }}</label>
+      <h5>{{ 'USERCREATEPAGE.TITLE' | translate }}</h5>
       <div class="login-group">
         <div class="form-group">
           <label class="required" for="lastName">{{ 'USERCREATEPAGE.LASTNAME' | translate }}</label>
